# Passneox

./: .gitignore  README.md  check_model_effectiveness.py  config.yaml  config_1.yaml  config_2.yaml  pyproject.toml  requirements.txt  run_exp.sh  run_model.py  sbs_batched.py  sbs_batched_beams.py  stochastic_beam_search.py
gpt_neox_multiseq/final_model/: config.json  generation_config.json
test/: decoding.py  sbs.py  sbs_batched.py  sbs_batched_beams.py  sbs_opt.py  sbs_opt_copy.py  test.ipynb  test.py
tokenizer/: merges.txt  vocab.json
your_output_path/: out.txt
